[package]
name = "trabajo1"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

log = "0.4"
futures = "0.3"
opentelemetry = { version = "0.31" }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
tarpc = { version = "0.37", features = ["full"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }

tracing = { version = "0.1" }
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.31"

rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }

ratatui = "0.26"
crossterm = "0.27"

[lib]
name = "service"
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"